--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 
 <head>
-    <script src="Scripts/jquery.js"></script>
-    <script src="dataService.js"></script>
-    <script src="leagueTable.js"></script>
+    <script src="Content/Scripts/jquery.js"></script>
+    <script src="Content/Scripts/dataService.js"></script>
+    <script src="Content/Scripts/leagueTable.js"></script>
 </head>
 
 </html>
