Working on table

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <script src="Content/Scripts/jquery.js"></script>
     <script src="Content/Scripts/dataService.js"></script>
     <script src="Content/Scripts/leagueTable.js"></script>
+    <link rel="stylesheet" href="Content/css/league-table.css">
 </head>
 
 </html>
